--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
 
     <link rel="stylesheet" href="fonts.css" type="text/css" />
     <script>
-      window.EXCALIDRAW_ASSET_PATH = "/";
+      window.EXCALIDRAW_ASSET_PATH = "/excalidraw/";
       // setting this so that libraries installation reuses this window tab.
       window.name = "_excalidraw";
     </script>
